@@ -103,6 +103,9 @@ void xnshadow_ticks2tv(unsigned long long ticks,
 
 void xnshadow_reset_shield(void);
 
+void xnshadow_send_sig(struct xnthread *thread,
+		       int sig);
+
 extern struct xnskentry muxtable[];
 
 #ifdef __cplusplus
